trying to complete it in time

--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -137,6 +137,7 @@
     <Text Include="_comment_post.txt" />
     <Text Include="_friend.txt" />
     <Text Include="_liked_posts.txt" />
+    <Text Include="_owner_post.txt" />
     <Text Include="_page.txt" />
     <Text Include="_page_owner.txt" />
     <Text Include="_post.txt" />
