completed full functionality

--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -127,10 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="improved_functionality.h" />
     <ClInclude Include="Original_functionality.h" />
     <ClInclude Include="vector_implemented_functionality.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="post_comments.txt" />
+    <Text Include="timeline.txt" />
     <Text Include="user.txt" />
     <Text Include="_comment.txt" />
     <Text Include="_comment_description.txt" />
@@ -139,9 +142,12 @@
     <Text Include="_liked_posts.txt" />
     <Text Include="_owner_post.txt" />
     <Text Include="_page.txt" />
+    <Text Include="_page_desc.txt" />
     <Text Include="_page_owner.txt" />
+    <Text Include="_page_owner_PG_O.txt" />
     <Text Include="_post.txt" />
     <Text Include="_post_description.txt" />
+    <Text Include="_post_liked_count.txt" />
     <Text Include="_user.txt" />
   </ItemGroup>
   <ItemGroup>
